--- a/package.json
+++ b/package.json
@@ -14,4 +14,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   }
+  "dependencies": {
+  "tailwindcss": "^3.0.0",
+  "autoprefixer": "^10.0.0",
+  "postcss": "^8.0.0"
+}
 }
