--- a/package.json
+++ b/package.json
@@ -1,22 +1,32 @@
 {
   "name": "daily100",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "firebase": "^10.0.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-scripts": "5.0.0"
+    "autoprefixer": "^10.4.14",
+    "firebase": "^10.7.1",
+    "postcss": "^8.4.21",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "tailwindcss": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
-  "dependencies": {
-  "tailwindcss": "^3.0.0",
-  "autoprefixer": "^10.0.0",
-  "postcss": "^8.0.0"
-}
 }
